--- a/nginx.conf
+++ b/nginx.conf
@@ -10,7 +10,7 @@ server {
     
     # 盈利分析API服务 - 转发到3333端口
     location ~* ^/api/profit/ {
-        proxy_pass http://copybot-test:3333;
+        proxy_pass http://host.docker.internal:3333;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection 'upgrade';
@@ -20,7 +20,7 @@ server {
     
     # 主要API服务 - 转发到3000端口
     location ~* ^/api/ {
-        proxy_pass http://copybot-test:3000;
+        proxy_pass http://host.docker.internal:3000;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection 'upgrade';
@@ -30,7 +30,7 @@ server {
     
     # WebSocket服务 - 转发到8081端口
     location /socket.io/ {
-        proxy_pass http://copybot-test:8081;
+        proxy_pass http://host.docker.internal:8081;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection 'upgrade';
@@ -40,7 +40,7 @@ server {
     
     # 交易历史WebSocket - 转发到8081端口的/trades路径
     location /trades {
-        proxy_pass http://copybot-test:8081/trades;
+        proxy_pass http://host.docker.internal:8081/trades;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection 'upgrade';
@@ -50,7 +50,7 @@ server {
     
     # 一般WebSocket连接 - 转发到8081端口
     location /ws {
-        proxy_pass http://copybot-test:8081;
+        proxy_pass http://host.docker.internal:8081;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection 'upgrade';
